kustomize/overlays/production/item-flow/pixta-pngfm/polling_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-checktool-result-poller
  labels:
    app: pngfm-checktool-result-poller
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pngfm-checktool-result-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-checktool-result-poller
        stage: production
    spec:
      containers:
        - name: pngfm-checktool-result-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-pngcheck-poller
  labels:
    app: pngfm-pngcheck-poller
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pngfm-pngcheck-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-pngcheck-poller
        stage: production
    spec:
      containers:
        - name: pngfm-pngcheck-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-jpgcheck-poller
  labels:
    app: pngfm-jpgcheck-poller
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pngfm-jpgcheck-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-jpgcheck-poller
        stage: production
    spec:
      containers:
        - name: pngfm-jpgcheck-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-checktool-start-poller
  labels:
    app: pngfm-checktool-start-poller
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pngfm-checktool-start-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-checktool-start-poller
        stage: production
    spec:
      containers:
        - name: pngfm-checktool-start-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-product-poller
  labels:
    app: pngfm-product-poller
    stage: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pngfm-product-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-product-poller
        stage: production
    spec:
      containers:
        - name: pngfm-product-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pngfm-tag-poller
  labels:
    app: pngfm-tag-poller
    stage: production
spec:
  replicas: 0
  selector:
    matchLabels:
      app: pngfm-tag-poller
      stage: production
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: pngfm-tag-poller
        stage: production
    spec:
      nodeSelector:
        balance-spot-public-instance: "true"
      tolerations:
        - key: "balance-spot-public-instance"
          operator: "Equal"
          value: "true"
          effect: "PreferNoSchedule"
      containers:
        - name: pngfm-tag-poller
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/png-flow-manager:production
